--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -8,15 +8,15 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-rc-bloco-b-GabrielSB22/myrep/.tko/cache/poo.md
-  cache_timestamp: '2025-10-20 20:48:19'
+  cache_timestamp: '2025-10-21 13:27:30'
   filters:
   - acesso
   - simples
 expanded:
 - poo@campanha-principal
-- poo@bloco_b-modificadores-de-acesso
 - poo@bloco_b-agregação-simples
-tasks: {}
+tasks:
+  poo@relogio: '{rate:100}'
 flags:
   quests: 0
   tracks: 0
@@ -24,4 +24,4 @@ flags:
   graph: 0
   xray: 0
 lang: py
-selected: poo@chinela
+selected: poo@motoca
