--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -8,13 +8,14 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-rc-bloco-b-GabrielSB22/myrep/.tko/cache/poo.md
-  cache_timestamp: '2025-10-21 13:27:30'
+  cache_timestamp: '2025-10-22 18:41:31'
   filters:
   - acesso
   - simples
 expanded:
 - poo@campanha-principal
 - poo@bloco_b-agregação-simples
+- poo@bloco_b-modificadores-de-acesso
 tasks:
   poo@relogio: '{rate:100}'
 flags:
