--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -8,7 +8,7 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-rc-bloco-b-GabrielSB22/myrep/.tko/cache/poo.md
-  cache_timestamp: '2025-10-22 18:41:31'
+  cache_timestamp: '2025-10-23 18:18:24'
   filters:
   - acesso
   - simples
@@ -18,6 +18,7 @@ expanded:
 - poo@bloco_b-modificadores-de-acesso
 tasks:
   poo@relogio: '{rate:100}'
+  poo@grafite: '{rate:100}'
 flags:
   quests: 0
   tracks: 0
@@ -25,4 +26,4 @@ flags:
   graph: 0
   xray: 0
 lang: py
-selected: poo@motoca
+selected: poo@grafite
